--- a/EXERCÍCIO/ex023/tabela001.html
+++ b/EXERCÍCIO/ex023/tabela001.html
@@ -11,6 +11,7 @@
         }
 
         table {
+            height: 400px;
             width: 400px;
             border-collapse: collapse;
         }
@@ -18,6 +19,7 @@
         td {
             border: 1px solid black;
             padding: 8px;
+            vertical-align: middle;
         }
 
     </style>
