update no tabela002

--- a/EXERCÍCIO/ex023/tabela001.html
+++ b/EXERCÍCIO/ex023/tabela001.html
@@ -7,7 +7,7 @@
     <title>Tabelas</title>
     <style>
         body {
-            font font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         }
 
         table {
