--- a/EXERCÍCIO/ex023/tabela002.html
+++ b/EXERCÍCIO/ex023/tabela002.html
@@ -66,10 +66,11 @@
                     TR, TD, TH        
         -->
     <table>
+        <caption>População das Unidades Federativas</caption>
          <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 65px; ">População</th>
             </tr>
          </thead>
          <tbody>
@@ -183,8 +184,29 @@
             </tr>
          </tbody>
          <tfoot>
-
+            <tr>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>210.147.125</strong></td>
+            </tr>
          </tfoot>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p>    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p> 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p> 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p> 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p> 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae velit excepturi dolore neque pariatur, ullam iure saepe corporis impedit? Nisi fuga totam provident quidem eius ea dolorum illum ne Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus tempora blanditiis corrupti, expedita commodi ad enim nihil fuga et tempore quidem quis modi quisquam cum exercitationem explicabo. Aut, incidunt vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Error cupiditate perferendis minima soluta incidunt atque dolores repudiandae quae iure quo, quasi nesciunt alias, totam, sint mollitia sed! Ipsa, expedita laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptates cupiditate quasi fugit eligendi id perferendis vel dolore velit voluptatem, ad officiis, iusto, numquam tempora dolorem? Totam, quo vel? Explicabo.
+    </p> 
 </body>
 </html>
