--- a/DESAFIO/d013-01.html
+++ b/DESAFIO/d013-01.html
@@ -5,25 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio Tabela 01</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width:400px;
+            border-collapse: collapse;
+            text-align: center;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 15px;
+        }
+    </style>
 </head>
 <body>
     <table>
         <tr>
             <td>1</td>
             <td>2</td>
-            <td>3</td>
+            <td rowspan="2">3</td>
             <td>4</td>
         </tr>
         <tr>
             <td>5</td>
             <td>6</td>
             <td>7</td>
-            <td>8</td>
+        </tr>    
+        <tr>
+            <td colspan="3">8</td>
+            <td>9</td>
+            
         </tr>
         <tr>
-            <td>9</td>
-            <td>10</td>
-            <td>11</td>
+            <td rowspan="2">10</td>
+            <td colspan="2">11</td>
             <td>12</td>
         </tr>
         <tr>
