--- a/EXERCÍCIO/ex023/tabela004.html
+++ b/EXERCÍCIO/ex023/tabela004.html
@@ -6,33 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
+
         table {
-            width: 400px;
+            width: 700px;
+            border-collapse: collapse;
         }
 
-        td {
+        td,th {
             border: 1px solid black;
             padding: 10px;
         }
+
     </style>
 </head>
 <body>
     <table>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</h>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</h>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>MULHERES</td>
+                <th rowspan="3" scope="rowgroup">MULHERES</th>
                 <td>Ana Maria Santos</td>
+                <td>Alien</td>
+                <td>Rambo</td>
+                <td>Vingadores</td>
+            </tr>
+            <tr>
                 <td>Beatriz Souza</td>
+                <td>Hulk</td>
+                <td>Inception</td>
+                <td>Batman</td>
+            </tr>
+            <tr>
                 <td>Cláudia Melo</td>
+                <td>Oblivion</td>
+                <td>Matrix</td>
+                <td>Big Hero</td>
+            </tr>
+            <tr>
+                <th rowspan="3" scope="rowgroup">HOMENS</th>
+                <td>Bruno Mendonça</td>
+                <td>Intocáveis</td>
+                <td>Amnésia</td>
+                <td>Gladior</td>
+            </tr>
+            <tr>
+                <td>Daniel Lourenço</td>
+                <td>Wall-E</td>
+                <td>Oldboy</td>
+                <td>Dangal</td>
+            </tr>
+            <tr>
+                <td>Fabiano Mota</td>
+                <td>Star Wars V</td>
+                <td>Taxi Driver</td>
+                <td>Toy Story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="rowgroup">TOTAL</th>
+                <td>Ação</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
