--- a/EXERCÍCIO/ex023/tabela005.html
+++ b/EXERCÍCIO/ex023/tabela005.html
@@ -1,105 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            
         }
 
         table {
-            width: 700px;
+            width: 500px;
             border-collapse: collapse;
         }
 
-        td,th {
+        caption {
+            font-size: 1.3em;
+            font-weight: bolder;
+            padding: 8px;
+        }
+        th,td {
             border: 1px solid black;
-            padding: 10px;
-            
-            text-align: center;
+            padding: 8px;    
         }
 
-        th {
-            background-color: gray;
-            color: white;
+        col.cnome {
+            background-color: rgb(209, 205, 205);
         }
 
-        .materia {
-            color: black;
-            background-color: white;
+        col.csexo {
+            background-color: rgb(206, 255, 239);
+        }
+
+        col.cidade {
+            background-color: rgb(223, 223, 223);
+        }
+
+        col.cprof {
+            background-color: rgb(217, 252, 239);
         }
     </style>
 </head>
 <body>
+    <h1>Exercício de Tabela</h1>
+
     <table>
-        <thead>
-            <th colspan="2">Área</th>
-            <th colspan="2">Disciplina</th>
-            <th>Notas</th>
-            <th>Notas 1</th>
-            <th>Notas 2</th>
-            <th >Média</th>
-        </thead>
-        <tbody>
-            <tr>
-                <th rowspan="4" class="materia">Exatas</th>
-                <td>Matemática</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Física</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Química</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Biologia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <th colspan="5">Média de Exatas </th>
-                <td class="media">0.0</td>
-            </tr>
-            <tr>
-                <th rowspan="2" class="materia">Humanas</th>
-                <td>História</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Geografia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th colspan="5">Média de Humanas</th>
-                <td class="media">0.0</td>
-            </tr>
-        </tfoot>
+        <colgroup>
+            <col class="cnome">
+            <col class="csexo">
+            <col class="cidade">
+            <col class="cprof">
+        </colgroup>
+        <caption>Cadastro</caption>
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
+        </tr>
+        <tr>
+            <td>Ana Maria</td>
+            <td>F</td>
+            <td>25</td>
+            <td>Jornalista</td>
+        </tr>
+        <tr>
+            <td>Cláudio</td>
+            <td>M</td>
+            <td>28</td>
+            <td>Progamador</td>
+        </tr>
+        <tr>
+            <td>Gustavo</td>
+            <td>M</td>
+            <td>42</td>
+            <td>Professor</td>
+        </tr>
+        <tr>
+            <td>Hélio</td>
+            <td>M</td>
+            <td>19</td>
+            <td>Vendedor</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>F</td>
+            <td>39</td>
+            <td>Médica</td>
+        </tr>
+        <tr>
+            <td>Ótavio</td>
+            <td>M</td>
+            <td>22</td>
+            <td>Nutricionista</td>
+        </tr>
+
     </table>
 </body>
 </html>
