--- a/EXERCÍCIO/ex024/iframe003.html
+++ b/EXERCÍCIO/ex024/iframe003.html
@@ -22,14 +22,14 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem doloremque est repudiandae velit laudantium ad obcaecati animi, eum praesentium quas itaque possimus unde, beatae, aliquam expedita voluptas nihil consequatur veniam.</p>
 
     <ul>
-        <li><a href="pag001.html" target="frame">Primeira página</a></li>
-        <li><a href="">Segunda página</a></li>
-        <li><a href="#">Terceira página</a></li>
+        <li><a href="paginas extras/pag001.html" target="frame">Primeira página</a></li>
+        <li><a href="paginas extras/pag002.html" target="frame">Segunda página</a></li>
+        <li><a href="paginas extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae impedit provident, atque natus similique corrupti. Magni recusandae, nemo atque dicta labore eius officiis quam fugiat soluta eum voluptatibus molestias illo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur ipsum animi libero iure repellat aliquid in similique, amet quod voluptates ullam laborum cumque quam dolores error commodi minus dignissimos ipsa!</p>
 
-    <iframe name="frame" src="" frameborder="0">
+    <iframe name="frame" srcdoc="<h1>Escolha Uma das opções acima</h1><p>loremansuhdiuhaihfhisfiyggfsugfytsg65f64f6fs6fg56cf5svdtfysfgutdffasxifyufs5 tdfat7fsdgstfg f6df dga76dbd76 a64f6tgst7f45eda5s6f456r6tfgs456drsd</p>" frameborder="0">
         <p>Infelizmente seu navegador não é compativel com isso.</p>
     </iframe>
 
