--- a/EXERCÍCIO/ex024/paginas extras/pag001.html
+++ b/EXERCÍCIO/ex024/paginas extras/pag001.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Pagina 001</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <h1>Exercício de Tabela</h1>
+    <h1>Página 001</h1>
 
     <table>
         <colgroup>
